--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Edit.razor
@@ -1,5 +1,6 @@
 @page "/contracts/{ContractId:guid}/edit"
 @rendermode InteractiveServer
+@inherits AuthorizedComponentBase
 @using System.ComponentModel.DataAnnotations
 @using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BlazorServer.Permissions
@@ -416,11 +417,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        hasPermission = await PermissionService.HasPermissionAsync(PermissionSection.Contract, PermissionFunction.Edit);
-        if (hasPermission)
-        {
-            await LoadContract();
-        }
+        await RequirePermission(PermissionSection.Contract, PermissionFunction.Edit);
+        await LoadContract();
     }
 
     private async Task LoadContract()
