--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Index.razor
@@ -1,6 +1,7 @@
 @page "/contracts"
 @using EstateManagementUI.BlazorServer.Factories
 @rendermode InteractiveServer
+@inherits AuthorizedComponentBase
 @using EstateManagementUI.BlazorServer.Permissions
 @using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
@@ -96,6 +97,8 @@
     {
         try
         {
+            await RequirePermission(PermissionSection.Contract, PermissionFunction.List);
+
             var result = await Mediator.Send(new Queries.GetContractsQuery(CorrelationIdHelper.New(), "stubbed-token", Guid.Parse("11111111-1111-1111-1111-111111111111")));
             if (result.IsSuccess) {
                 contracts = ModelFactory.ConvertFrom(result.Data);
