--- a/EstateManagementUI.BlazorServer/Components/Pages/FileProcessing/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/FileProcessing/Index.razor
@@ -3,6 +3,7 @@
 @using EstateManagementUI.BlazorServer.Permissions
 @using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
+@inherits AuthorizedComponentBase
 @inject NavigationManager NavigationManager
 @inject IPermissionKeyProvider PermissionKeyProvider
 
@@ -131,6 +132,8 @@
     {
         try
         {
+            await RequirePermission(PermissionSection.FileProcessing, PermissionFunction.List);
+
             var correlationId = new CorrelationId(Guid.NewGuid());
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
             var merchantId = Guid.Parse("22222222-2222-2222-2222-222222222222");
