--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Deposit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Deposit.razor
@@ -4,6 +4,7 @@
 @using EstateManagementUI.BlazorServer.Permissions
 @using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
+@inherits AuthorizedComponentBase
 @inject NavigationManager NavigationManager
 @inject IPermissionService PermissionService
 
@@ -117,14 +118,8 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        // Check permission first
-        hasPermission = await PermissionService.HasPermissionAsync(PermissionSection.Merchant, PermissionFunction.MakeDeposit);
+        await RequirePermission(PermissionSection.Merchant, PermissionFunction.MakeDeposit);
         
-        if (!hasPermission)
-        {
-            return;
-        }
-
         // Set default date to today
         model.Date = DateTime.Today;
 
