--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Index.razor
@@ -4,6 +4,7 @@
 @using EstateManagementUI.BlazorServer.Permissions
 @using EstateManagementUI.BusinessLogic.Requests
 @inject IMediator Mediator
+@inherits AuthorizedComponentBase
 @inject NavigationManager NavigationManager
 @inject IPermissionKeyProvider PermissionKeyProvider
 
@@ -134,6 +135,8 @@
     {
         try
         {
+            await RequirePermission(PermissionSection.Merchant, PermissionFunction.List);
+
             var correlationId = new CorrelationId(Guid.NewGuid());
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
 
