--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/View.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/View.razor
@@ -2,6 +2,7 @@
 @using EstateManagementUI.BlazorServer.Factories
 @rendermode InteractiveServer
 @inject IMediator Mediator
+@inherits  AuthorizedComponentBase
 @inject NavigationManager NavigationManager
 @using EstateManagementUI.BlazorServer.Models
 @using EstateManagementUI.BusinessLogic.Requests
@@ -330,6 +331,7 @@
 
     protected override async Task OnInitializedAsync()
     {
+        await RequirePermission(PermissionSection.Merchant, PermissionFunction.View);
         await LoadMerchant();
     }
     
