--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/AnalyticalCharts.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/AnalyticalCharts.razor
@@ -1,7 +1,7 @@
 @page "/reporting/analytical-charts"
 @using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BusinessLogic.Requests
-@using Shared.General
+@using global::Shared.General
 @rendermode InteractiveServer
 @inject IMediator Mediator
 @inject IJSRuntime JSRuntime
