Refactor operator retrieval to centralize token handling
Remove access token from GetOperatorsQuery and update all usages. Add Operator DTO and API client methods for operator retrieval. Centralize token acquisition in ApiClient. Optimize estate data loading with parallel queries and real API calls. Improves maintainability and efficiency of operator data access.

--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/TransactionDetail.razor
@@ -427,7 +427,7 @@
             
             // Load filter options
             var merchantsTask = Mediator.Send(new Queries.GetMerchantsQuery(correlationId, estateId));
-            var operatorsTask = Mediator.Send(new Queries.GetOperatorsQuery(correlationId, accessToken, estateId));
+            var operatorsTask = Mediator.Send(new Queries.GetOperatorsQuery(correlationId, estateId));
             var contractsTask = Mediator.Send(new Queries.GetContractsQuery(correlationId, accessToken, estateId));
             
             await Task.WhenAll(merchantsTask, operatorsTask, contractsTask);
