--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Edit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Edit.razor
@@ -535,7 +535,7 @@ else
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
             var accessToken = "stubbed-token";
 
-            var result = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, accessToken, estateId));
+            var result = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, estateId));
             
             if (result.IsSuccess)
             {
