--- a/EstateManagementUI.BlazorServer/Components/Pages/Operators/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Operators/Index.razor
@@ -126,7 +126,7 @@
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
             var accessToken = "stubbed-token";
 
-            var result = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, accessToken, estateId));
+            var result = await Mediator.Send(new Queries.GetOperatorsQuery(correlationId, estateId));
             if (result.IsSuccess)
             {
                 operators = ModelFactory.ConvertFrom(result.Data);
