--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/MerchantSettlementHistory.razor
@@ -219,8 +219,7 @@
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111"); // Test estate ID
             var query = new Queries.GetMerchantsQuery(
                 CorrelationIdHelper.New(),
-                estateId
-            );
+                estateId, null, null, null, null, null);
 
             var result = await Mediator.Send(query);
             if (result.IsSuccess)
