--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Deposit.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/Deposit.razor
@@ -130,7 +130,7 @@ else
             var estateId = Guid.Parse("11111111-1111-1111-1111-111111111111");
             var accessToken = "stubbed-token";
 
-            var result = await Mediator.Send(new Queries.GetMerchantQuery(correlationId, accessToken, estateId, MerchantId));
+            var result = await Mediator.Send(new MerchantQueries.GetMerchantQuery(correlationId, estateId, MerchantId));
             if (result.IsSuccess && result.Data != null)
             {
                 merchantName = result.Data.MerchantName;
