--- a/EstateManagementUI.BlazorServer/Components/Pages/Reporting/SettlementSummary.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Reporting/SettlementSummary.razor
@@ -2,6 +2,7 @@
 @using EstateManagementUI.BlazorServer.Factories
 @using EstateManagementUI.BusinessLogic.Models
 @using EstateManagementUI.BusinessLogic.Requests
+@using MerchantDropDownModel = EstateManagementUI.BlazorServer.Models.MerchantDropDownModel
 @using SettlementSummaryModel = EstateManagementUI.BlazorServer.Models.SettlementSummaryModel
 @rendermode InteractiveServer
 @inject IMediator Mediator
