--- a/EstateManagementUI.BlazorServer/Components/Pages/Merchants/View.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Merchants/View.razor
@@ -219,7 +219,7 @@
                                 @foreach (var device in assignedDevices)
                                 {
                                     <div class="p-3 bg-gray-50 rounded-lg">
-                                        <p class="font-mono text-gray-900">@device</p>
+                                        <p class="font-mono text-gray-900">@device.DeviceIdentifier</p>
                                     </div>
                                 }
                             </div>
