Refactor contract queries and commands structure
- Move contract-related queries to new ContractQueries class
- Introduce ContractDropDownModel and related conversion methods
- Update merchant contract assignment to use dropdown model
- Move AssignContractToMerchant to MerchantCommands
- Add IApiClient methods for recent contracts and dropdowns
- Add EstateReportingApiClient.GetContracts method
- Update handlers, mediator, and tests for new structure
- Minor bug fixes and code cleanup for clarity and maintainability

--- a/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Index.razor
+++ b/EstateManagementUI.BlazorServer/Components/Pages/Contracts/Index.razor
@@ -99,7 +99,7 @@
         {
             await RequirePermission(PermissionSection.Contract, PermissionFunction.List);
 
-            var result = await Mediator.Send(new Queries.GetContractsQuery(CorrelationIdHelper.New(), "stubbed-token", Guid.Parse("11111111-1111-1111-1111-111111111111")));
+            var result = await Mediator.Send(new ContractQueries.GetContractsQuery(CorrelationIdHelper.New(), "stubbed-token", Guid.Parse("11111111-1111-1111-1111-111111111111")));
             if (result.IsSuccess) {
                 contracts = ModelFactory.ConvertFrom(result.Data);
             }
